--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,23 @@
-#configuraciones DataSource
+##configuraciones DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/aulavirtual?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=4740545Manzana
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 ##Configuraciones JPA - Hibernate
-spring.jpa.database-platform= org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql= true
 spring.jpa.hibernate.naming.implicit-strategy= org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-# Configuraciones MVC
-server.port=8070
-server.servlet.context-path=
+#spring.jpa.hibernate.ddl-auto=create
 
+##Configuraciones MVC
+server.port=3000
 
+##Configuraciones de Thymeleaf
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.cache=false
+
+#spring.mvc.view.prefix=/templates/
+#spring.mvc.view.suffix=.html
+#spring.mvc.static-path-pattern=/**
