--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
-#configuraciones DataSource
-spring.datasource.url=jdbc:postgresql://localhost:5432/aulavirtual?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=postgres
+###Configuraciones DataSource
+#spring.datasource.url=jdbc:postgresql://localhost:5432/aulavirtual?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/saludya?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##Configuraciones JPA - Hibernate
-spring.jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql= true
 spring.jpa.hibernate.naming.implicit-strategy= org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# Configuraciones MVC
-server.port=8070
+###Configuraciones MVC
+server.port=1000
 
 ##Configuraciones de Thymeleaf
 spring.thymeleaf.enabled=true
